# tools

./: Agents.md  flake.nix
.github/workflows/: release-ewwkit.yml
apps/ewwkit/: .gitignore  Cargo.toml  justfile
apps/ewwkit/config/: default.toml
apps/ewwkit/src/: cli.rs  config.rs  main.rs  popup.rs  test_utils.rs
apps/ewwkit/src/application/: mod.rs
apps/ewwkit/src/domain/: mod.rs
apps/ewwkit/src/infrastructure/: audio.rs  battery.rs  brightness.rs  controls.rs  event_bus.rs  eww.rs  icons.rs  ipc.rs  mod.rs  niri.rs  sysfs.rs  wifi.rs
apps/gitab/: .gitignore  README.md  justfile  package.json  wxt.config.ts
apps/gitab/src/entrypoints/: background.ts  gitlab.content.ts
apps/gitab/src/entrypoints/popup/: index.html  main.ts  style.css
apps/gitab/src/utils/: favicon-generator.ts  resource-types.ts  storage.ts  url-parser.test.ts  url-parser.ts
apps/postkit/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml  daemon.example.toml  docker-compose.yml  post.example.toml
apps/postkit/crates/postkit/: Cargo.toml
apps/postkit/crates/postkit-core/: Cargo.toml
apps/postkit/crates/postkit-core/src/: lib.rs
apps/postkit/crates/postkit-daemon/: Cargo.toml
apps/postkit/crates/postkit-daemon/src/: config.rs  main.rs  routes.rs  worker.rs
apps/postkit/crates/postkit-providers-bluesky/: Cargo.toml
apps/postkit/crates/postkit-providers-bluesky/src/: lib.rs
apps/postkit/crates/postkit-providers-x/: Cargo.toml
apps/postkit/crates/postkit-providers-x/src/: lib.rs
apps/postkit/crates/postkit-store/: Cargo.toml
apps/postkit/crates/postkit-store/migrations/: 001_initial.sql  002_retry.sql
apps/postkit/crates/postkit-store/src/: lib.rs
apps/postkit/crates/postkit/src/: bluesky.rs  config.rs  main.rs
cli/comlot/: README.md  app.tsx  docker-compose.yml  index.ts  login.tsx  package.json  tsconfig.json
cli/comlot/componenets/: log-viewer.tsx  service-list-item.tsx  service-list.tsx
cli/comlot/context/: app-state.tsx  services.tsx
cli/comlot/core/: docker.ts  log-parser.ts  logs-stream.ts
cli/devolution/: README.md  TODO.md  events.py  mails.py  pyproject.toml  tasks.py
cli/devolution/devolution/: __init__.py  event_reader.py  logging_utils.py  mail_reader.py  renderers.py  sources.py  task_reader.py
