[package]
name = "ewwkit"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
async-trait = "0.1"
freedesktop-icons = "0.2"
