[workspace]
members = [
    "crates/postkit-core",
    "crates/postkit-providers-bluesky",
    "crates/postkit-providers-x",
    "crates/postkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
