[package]
name = "postkit-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "postkit-daemon"
path = "src/main.rs"

[dependencies]
postkit-core = { path = "../postkit-core" }
postkit-store = { path = "../postkit-store" }
postkit-providers-bluesky = { path = "../postkit-providers-bluesky" }
postkit-providers-x = { path = "../postkit-providers-x" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
