[package]
name = "postkit-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "postkit-daemon"
path = "src/main.rs"

[dependencies]
postkit-core = { path = "../postkit-core" }
postkit-store = { path = "../postkit-store" }
postkit-providers-bluesky = { path = "../postkit-providers-bluesky" }
postkit-providers-x = { path = "../postkit-providers-x" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
