[package]
name = "postkit-providers-bluesky"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postkit-core = { path = "../postkit-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { version = "0.4" }
regex = "1"
unicode-segmentation = "1"
