[package]
name = "postkit-providers-x"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postkit-core = { path = "../postkit-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2"
unicode-segmentation = "1"
