[package]
name = "postkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "postkit"
path = "src/main.rs"

[dependencies]
postkit-core = { path = "../postkit-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4" }
regex = "1"
unicode-segmentation = "1"
toml = "0.8"
