[package]
name = "postkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "postkit"
path = "src/main.rs"

[dependencies]
postkit-core = { path = "../postkit-core" }
postkit-providers-bluesky = { path = "../postkit-providers-bluesky" }
postkit-providers-x = { path = "../postkit-providers-x" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
reqwest = { workspace = true }
chrono = { workspace = true }
